tests/ui/model_supports_missing.stderr
error: OpenRouter model `perceptron/perceptron-mk1` does not support required parameter(s): tools
 --> tests/ui/model_supports_missing.rs:3:37
  |
3 | const MODEL: &str = model_supports!("perceptron/perceptron-mk1", "structured_outputs", "tools");
  |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
